--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "ts-node": ">=8.0.0",
     "typescript": "~5.0.4",
     "viem": "^2.7.6"
+  },
+  "dependencies": {
+    "@oasisprotocol/sapphire-contracts": "^0.2.15"
   }
 }
