Revert "Frontend deps"
This reverts commit 17d2e027d2ab0de08c65882f086838d7516e6897.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,4 @@
 {
-  "scripts": {
-    "dev": "npx hardhat compile && cd frontend && vite",
-    "build": "npx hardhat compile && cd frontend && tsc && vite build",
-    "preview": "cd frontend && vite preview"
-  },
-  "dependencies": {
-    "@oasisprotocol/sapphire-contracts": "^0.2.15",
-    "@rainbow-me/rainbowkit": "^2.2.9",
-    "@tanstack/react-query": "^5.90.12",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "viem": "^2.41.2",
-    "wagmi": "2"
-  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
     "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
@@ -24,15 +10,15 @@
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
     "chai": "^4.2.0",
     "hardhat": "^2.27.1",
     "hardhat-gas-reporter": "^2.3.0",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.6"
+    "typescript": "~5.0.4",
+    "viem": "^2.7.6"
+  },
+  "dependencies": {
+    "@oasisprotocol/sapphire-contracts": "^0.2.15"
   }
 }
