--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,7 +80,9 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@tailwindcss/vite": "^4.1.5",
+    "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -100,6 +102,8 @@
     "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.2.9",
     "vaul": "^1.1.2",
+    "viem": "^2.41.2",
+    "wagmi": "^3.1.0",
     "zod": "^3.24.3"
   },
   "eslintConfig": {
