--- a/frontend/package.json
+++ b/frontend/package.json
@@ -103,7 +103,7 @@
     "tw-animate-css": "^1.2.9",
     "vaul": "^1.1.2",
     "viem": "^2.41.2",
-    "wagmi": "^3.1.0",
+    "wagmi": "2",
     "zod": "^3.24.3"
   },
   "eslintConfig": {
