--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=20.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^17.2.3",
     "hardhat": "^2.27.1",
     "hardhat-gas-reporter": "^2.3.0",
     "solidity-coverage": "^0.8.0",
