--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "@storybook/test-runner": "^0.22.0",
     "@types/node": "^22.15.3",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^19.2.3",
+    "@types/react-dom": "18",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
