Fix typescript errors

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-storybook": "^9.0.0-rc.2",
     "globals": "^16.0.0",
     "markdownlint-cli": "^0.45.0",
+    "minimatch": "^10.1.1",
     "playwright": "^1.56.1",
     "prettier": "^3.5.3",
     "shadcn": "2.5.0",
