Cloudflare CI fix init and build folder

--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: '20.x'
           cache: yarn
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --frozen-lockfile && cd frontend && yarn install --frozen-lockfile
       - name: Build app
         run: yarn build
       - name: Publish to Cloudflare Pages
@@ -67,7 +67,7 @@ jobs:
           # Acquired from Cloudflare dashboard -> Compute > Workers & Pages or dashboard url: https://dash.cloudflare.com/<account-id>/
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           # Project created via Cloudflare dashboard or CLI command "npx wrangler pages project create <project-name>"
-          command: pages deploy ./build --project-name=oasis-explorer --branch ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || '' }}
+          command: pages deploy ./frontend/dist --project-name=xmas-roffle --branch ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || '' }}
       # On a subsequent run the original comment will be updated.
       - name: Update PR comment
         uses: mshick/add-pr-comment@v2
