--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
     "dev": "hardhat compile && cd frontend && yarn dev",
-    "build": "hardhat compile && cd frontend && yarn build"
+    "build:contracts": "hardhat compile",
+    "build:frontend": "cd frontend && yarn build",
+    "build": "yarn build:contracts && yarn build:frontend"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
