--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -4,9 +4,9 @@ name: cloudflare-pages
 # Trigger the workflow when:
 on:
   # A push occurs to one of the matched branches.
-  # push:
-    # branches:
-      # - master
+  push:
+    branches:
+      - master
   # Or when a pull request event occurs for a pull request against one of the
   # matched branches.
   pull_request:
