--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
     "@hookform/resolvers": "^5.0.1",
+    "@metamask/jazzicon": "^2.0.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
