--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "npx hardhat compile && cd frontend && vite",
     "build:contracts": "NODE_OPTIONS=--max-old-space-size=4096 hardhat compile",
     "build:frontend": "cd frontend && NODE_OPTIONS=--max-old-space-size=4096 yarn build",
-    "build": "yarn build:contracts && yarn build:frontend"
+    "build": "yarn build:contracts && yarn build:frontend",
+    "prepare": "husky"
   },
   "dependencies": {
     "@oasisprotocol/sapphire-contracts": "^0.2.15",
