fix: add husky to root devDependencies for CI
The prepare script runs 'husky' but husky was only installed in
frontend/. CI failed because root yarn install couldn't find husky.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "wagmi": "2"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
     "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
