feat(security): add CSP header to nginx
Add Content-Security-Policy header to all nginx location blocks,
allowing required external connections for RPC endpoints,
WalletConnect relay, Google Fonts, and Oasis assets while
restricting all other sources to 'self'.

Fixes #38

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,6 +25,7 @@ server {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://assets.oasis.io https://images.ctfassets.net https://raw.githubusercontent.com; connect-src 'self' https://sapphire.oasis.io wss://sapphire.oasis.io https://mainnet.base.org https://arb1.arbitrum.io https://eth.merkle.io https://*.walletconnect.com https://*.walletconnect.org wss://*.walletconnect.com wss://*.walletconnect.org; frame-src 'self' https://verify.walletconnect.com https://verify.walletconnect.org; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;" always;
         access_log off;
     }
 
@@ -37,6 +38,7 @@ server {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://assets.oasis.io https://images.ctfassets.net https://raw.githubusercontent.com; connect-src 'self' https://sapphire.oasis.io wss://sapphire.oasis.io https://mainnet.base.org https://arb1.arbitrum.io https://eth.merkle.io https://*.walletconnect.com https://*.walletconnect.org wss://*.walletconnect.com wss://*.walletconnect.org; frame-src 'self' https://verify.walletconnect.com https://verify.walletconnect.org; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;" always;
         access_log off;
     }
 
@@ -52,6 +54,7 @@ server {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://assets.oasis.io https://images.ctfassets.net https://raw.githubusercontent.com; connect-src 'self' https://sapphire.oasis.io wss://sapphire.oasis.io https://mainnet.base.org https://arb1.arbitrum.io https://eth.merkle.io https://*.walletconnect.com https://*.walletconnect.org wss://*.walletconnect.com wss://*.walletconnect.org; frame-src 'self' https://verify.walletconnect.com https://verify.walletconnect.org; object-src 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;" always;
     }
 
     # Handle 404 for missing files (return to SPA)
